Fix SVG alignment + Debugger page todo

--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -32,3 +32,8 @@
   padding-bottom: 1em;
   cursor: pointer;
 }
+
+
+p.svg-container {
+  line-height: normal !important;
+}
